[gd_scene load_steps=7 format=3 uid="uid://beebwu1e2xqof"]

[ext_resource type="Script" path="res://scripts/edit_menu.gd" id="1_nxwmh"]
[ext_resource type="PackedScene" uid="uid://dsxfdrovrhr7m" path="res://scenes/arm_selections.tscn" id="2_dcaqd"]
[ext_resource type="PackedScene" uid="uid://dtlvgdshhakg0" path="res://scenes/jetpack_selections.tscn" id="2_xk2jv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_gf118"]

[sub_resource type="ButtonGroup" id="ButtonGroup_c0i40"]
allow_unpress = true

[sub_resource type="ButtonGroup" id="ButtonGroup_r520c"]
allow_unpress = true

[node name="edit_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxwmh")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.113725, 0.113725, 0.113725, 0.67451)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("CanvasTexture_gf118")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 18
alignment = 1

[node name="jetpack_selections" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_xk2jv")]
layout_mode = 2
jetpack_group = SubResource("ButtonGroup_c0i40")

[node name="Seperator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="arm_selections" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_dcaqd")]
layout_mode = 2
arm_group = SubResource("ButtonGroup_r520c")

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[connection signal="jetpack_selected" from="MarginContainer/HBoxContainer/VBoxContainer/jetpack_selections" to="." method="_on_jetpack_selections_jetpack_selected"]
[connection signal="arm_selected" from="MarginContainer/HBoxContainer/VBoxContainer/arm_selections" to="." method="_on_arm_selections_arm_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
